WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143541
Fix -Wformat in AnimationBase.cpp
https://bugs.webkit.org/show_bug.cgi?id=143541
Summary
Fix -Wformat in AnimationBase.cpp
Michael Catanzaro
Reported
2015-04-08 17:06:37 PDT
Since
r170070
: ../../Source/WebCore/page/animation/AnimationBase.cpp:321:259: warning: format ‘%d’ expects argument of type ‘int’, but argument 5 has type ‘WebCore::AnimationBase::AnimationStateInput’ [-Wformat=] This only occurs in debug builds. We can either static_cast it to an int, or print it as a string.
Attachments
Patch
(3.34 KB, patch)
2015-04-08 18:15 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2015-04-08 18:15:16 PDT
Created
attachment 250399
[details]
Patch
WebKit Commit Bot
Comment 2
2015-04-08 19:16:32 PDT
Comment on
attachment 250399
[details]
Patch Clearing flags on attachment: 250399 Committed
r182580
: <
http://trac.webkit.org/changeset/182580
>
WebKit Commit Bot
Comment 3
2015-04-08 19:16:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug