Fix -Wformat in AnimationBase.cpp https://bugs.webkit.org/show_bug.cgi?id=143541

Reviewed by Simon Fraser.

* page/animation/AnimationBase.cpp:
(WebCore::nameForStateInput): Added. Converts an AnimationBase::AnimationStateInput to a
string.
(WebCore::AnimationBase::updateStateMachine): Print AnimationBase::AnimationStateInput as a
string, instead of passing it to %d and assuming that works, to silence GCC's -Wformat.


Canonical link: https://commits.webkit.org/161578@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182580 268f45cc-cd09-0410-ab3c-d52691b4dbfc